--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang='en' data-version='1516748207780'>
+<html lang='en' data-version='1516752312044'>
 
 <head>
 
@@ -8,10 +8,10 @@
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
 	<meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
 	<meta name='description' content='The Most Visited Restaurant Type By Neighborhood' />
-
+	
 	<meta property='og:title' content='The Most Visited Restaurant Type By Neighborhood' />
 	<meta property='og:site_name' content='Google News Lab' />
-
+	
 	<link rel='stylesheet' href='style.css' />
 
 	<!-- smoosh -->
@@ -27,14 +27,14 @@
 	    font-weight: 400;
 	    src: url('assets/product_regular.woff2') format('woff2');
 	  }
-
+	
 	  @font-face {
 	    font-family: 'Product Sans';
 	    font-style: normal;
 	    font-weight: 700;
 	    src: url('assets/product_bold.woff2') format('woff2');
 	  }
-
+	
 	</style>
 
 	<!-- smoosh -->
@@ -46,7 +46,7 @@
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
+	
 		ga('create', 'UA-87089723-10', 'auto');
 		ga('send', 'pageview');
 	</script>
@@ -69,32 +69,32 @@
 
 		<div class='intro'>
 		  <div class="head-to-head-wrapper">
-		    <p class="chart-title"><span>Head to Head:</span> What is the More Popular Restaurant to Visit?
+		    <p class="chart-title">What is the More Popular Restaurant to Visit?
 		    </p>
 		    <div class="head-to-head-chart">
 		    </div>
 		  </div>
 		</div>
-
+		
 		<!-- <script src="//maps.googleapis.com/maps/api/js?sensor=false"></script> -->
 		<!-- <script type="text/javascript" src="//d2zah9y47r7bi2.cloudfront.net/releases/current/tracker.js" data-token="cf7a7cd8411140689ea94e92d9fba842"></script>
 		<script type="text/javascript" src="//maps.googleapis.com/maps/api/js?sensor=false&v=3.12&client=google-newslab"></script>
 		<script src="//cartodb-libs.global.ssl.fastly.net/cartodbui/assets/4.10.130/javascripts/embed.js" type="text/javascript"></script>
 		<script src="//cartodb-libs.global.ssl.fastly.net/cartodbui/assets/4.10.130/javascripts/public_like.js" type="text/javascript"></script> -->
-
+		
 		<!-- <script type="text/javascript" src="//d2zah9y47r7bi2.cloudfront.net/releases/current/tracker.js" data-token="cf7a7cd8411140689ea94e92d9fba842"></script> -->
-
+		
 		<!-- <script src="https://maps.googleapis.com/maps/api/js" type="text/javascript"></script>
 		<script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script> -->
-
+		
 		<!-- <script type="text/javascript" src="assets/newslab-library.js"></script> -->
-
-
+		
+		
 		<!--  -->
 		<script>
-
-
-
+		
+		
+		
 		// function main() {
 		//
 		//
@@ -102,15 +102,15 @@
 		// }
 		//
 		// window.onload = main;
-
+		
 		</script>
-
-
-
-
+		
+		
+		
+		
 		  <!-- <script>
 		    mapboxgl.accessToken = 'pk.eyJ1IjoiZG9jazQyNDIiLCJhIjoiY2oxbTZ2eW1sMDAyMzMzbzJid2V4YjFycyJ9.O6b7p8u1Sd0CO7GREOiu0w';
-
+		
 		    var map = new mapboxgl.Map({
 		      container: 'map',
 		      style: 'mapbox://styles/dock4242/cj9653g511iwr2so6cbiq5wbm',
@@ -120,11 +120,11 @@
 		      //pitch: 45,
 		      scrollZoom:false
 		    });
-
+		
 		    map["doubleClickZoom"].disable();
-
+		
 		  </script> -->
-
+		
 		<div class="top-neighborhoods">
 		  <div class="top-neighborhoods-chart">
 		  </div>
@@ -149,7 +149,7 @@
 	<script src='assets/scripts/d3.v4.10.2+jetpack.min.js'></script>
 	<script src='assets/scripts/topojson.v2.min.js'></script>
 	<script src='assets/scripts/d3-scale-chromatic.v1.min.js'></script>
-	<script src='bundle.js?version=1516748207780' async></script>
+	<script src='bundle.js?version=1516752312044' async></script>
 
 
 	</script>
